2005-12-20  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version for X11R7 release.

2005-12-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for final X11R7 release candidate.

2005-12-08  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* src/Makefile.am:
	Add configure options to allow hard-coded paths to be changed.

2005-12-06  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* man/Makefile.am:
	Change *man_SOURCES ==> *man_PRE to fix autotools warnings.

2005-12-05  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Fix libtool hack to work with older libtools.

2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-11-20  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	libXaw6 shouldn't depend on libXpm, only Xaw7 & Xaw8 should

2005-11-19  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* xaw6.pc.in:
	* xaw7.pc.in:
	* xaw8.pc.in:
	Update pkgconfig files to separate library build-time dependencies
	from application build-time dependencies.
	* configure.ac:
	Update dependencies to work with separate build roots.

2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC2 release.

2005-10-28  Alan Coopersmith  <alan.coopersmith@sun.com>

	* src/Makefile.am:
	Add libXaw.so.N -> libXawN.so.N links for platforms where
	ldconfig doesn't add them automatically for you.

2005-10-24  Alan Coopersmith  <alan.coopersmith@sun.com>

	* src/Makefile.am: 
	Add -DOLDXAW to flags for building libXaw6 to disable features
	that are only supposed to be in the newer versions.

2005-10-21  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Add xext check.

2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.
