@@ -72,12 +72,14 @@ libXaw6_la_CFLAGS =			\
 libXaw6_la_SOURCES = \
 	$(COMMON_SOURCES)
 
-libXaw6_la_LDFLAGS = -version-info 6:1:0
+libXaw6_la_LDFLAGS = -version-info 6:1:0 -no-undefined
 libXaw6_la_LIBADD = $(XAW6_LIBS)
 
+if !PLATFORM_WIN32
 install-exec-hook::
 	-rm -f $(DESTDIR)$(libdir)/libXaw.so.6
 	(cd $(DESTDIR)$(libdir) && ln -s libXaw6.so.6 libXaw.so.6)
+endif
 
 endif
 
@@ -94,12 +96,14 @@ libXaw7_la_SOURCES = \
 	$(COMMON_SOURCES) \
 	Tip.c
 
-libXaw7_la_LDFLAGS = -version-info 7:0:0
+libXaw7_la_LDFLAGS = -version-info 7:0:0 -no-undefined
 libXaw7_la_LIBADD = $(XAW7_LIBS)
 
+if !PLATFORM_WIN32
 install-exec-hook::
 	-rm -f $(DESTDIR)$(libdir)/libXaw.so.7
 	(cd $(DESTDIR)$(libdir) && ln -s libXaw7.so.7 libXaw.so.7)
+endif
 
 endif
 
@@ -116,12 +120,14 @@ libXaw8_la_SOURCES = \
 	PrintShell.c \
 	Tip.c
 
-libXaw8_la_LDFLAGS = -version-info 8:0:0
+libXaw8_la_LDFLAGS = -version-info 8:0:0 -no-undefined
 libXaw8_la_LIBADD = $(XAW8_LIBS)
 
+if !PLATFORM_WIN32
 install-exec-hook::
 	-rm -f $(DESTDIR)$(libdir)/libXaw.so.8
 	(cd $(DESTDIR)$(libdir) && ln -s libXaw8.so.8 libXaw.so.8)
+endif
 
 endif
 
