@@ -1,3 +1,10 @@
+2006-04-03  Adam Jackson  <ajax@freedesktop.org>
+
+	* Makefile.am:
+	* configure.ac:
+	* src/Makefile.am:
+	Bug #6404: Cygwin build fixes (Yaakov Selkowitz)
+
 2005-12-20  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* configure.ac:
